# Scorpio-moje-rozwi-zanie

./: .gitignore  CMakeLists.txt  README.md
include/: main.hpp
include/backend/: basic_tester.hpp  mock_component.hpp  motor.hpp  spinnable.hpp
include/backend_interface/: component.hpp  tester.hpp
include/solution/: solution.h
include/solution_interface/: solver.hpp
src/: main.cpp
src/backend/: basic_tester.cpp  motor.cpp
src/solution/: solution.cpp
unit_tests/: test_basic_tester.cpp  test_main.cpp  test_motor.cpp
